test/1.2/errors/EERRSTMT_dml14.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

method m_dml14() {
    if (false) {
        /// ERROR EERRSTMT
        error "xyz";
    }
    #if (false) {
        // no error
        error "xyz";
    }
    while (false) {
        /// ERROR EERRSTMT
        error;
    }
}

// Subdevices may not be named "port" in devices
// since that might otherwise cause Simics conf-object names to clash.
// Unlike DML 1.4, no need to test 'bank' here since that ENAMECOLLs with
// a parameter.
/// ERROR EERRSTMT
subdevice port;

// Banks, ports, and subdevices may not be declared underneath any group named
// "port" (as that would introduce conflicting namespaces)
group g1 {
    group port {
        /// ERROR EERRSTMT
        subdevice s;
        /// ERROR EERRSTMT
        port p;
        group g {
            /// ERROR EERRSTMT
            subdevice s;
            /// ERROR EERRSTMT
            port p;
        }
    }
}

group g2 {
    port port;
}

group g3 {
    /// ERROR EERRSTMT
    subdevice port;
}

subdevice s {
    group g1 {
        group port {
            group g {
                /// ERROR EERRSTMT
                subdevice s;
                /// ERROR EERRSTMT
                port p;
            }
        }
    }
    group g2 {
        /// ERROR EERRSTMT
        subdevice port;
    }
}

// no error
port p {
    group port;
}
bank b {
    group port;
}
